# actix-sqlx-demo

./: .env  Cargo.toml  demo_data.sql
.fso-amem/: project.toml
src/: main.rs
